Keep the toolbar overflow menu the same when removing a component action

Currently, when you remove a component action from the toolbar while there are actions in the overflow menu, one of the actions gets popped out of the menu to fill the component action's position. This CL makes such actions stay in the overflow menu.

BUG=661301

Review-Url: https://codereview.chromium.org/2469013003
Cr-Commit-Position: refs/heads/master@{#429645}

Former-commit-id: 8cf8f45a8ae3869aca0e9e7158ae00061cc6bc4f