chrome/browser/ui/toolbar/toolbar_actions_model_unittest.cc
@@ -1430,6 +1430,32 @@ TEST_F(ToolbarActionsModelUnitTest,
   EXPECT_EQ(browser_action_c()->id(), GetActionIdAtIndex(1u));
 }
 
+TEST_F(ToolbarActionsModelUnitTest, AddAndRemoveComponentActionWithOVerflow) {
+  Init();
+  // Add three extension actions: A, B, C.
+  ASSERT_TRUE(AddBrowserActionExtensions());
+  EXPECT_EQ(3u, num_toolbar_items());
+
+  // Hide the last icon: A, B, [C].
+  toolbar_model()->SetVisibleIconCount(2);
+  EXPECT_EQ(2u, toolbar_model()->visible_icon_count());
+  EXPECT_EQ(browser_action_c()->id(), GetActionIdAtIndex(2u));
+
+  // Add a component action, CA. Now the icons should be: A, B, CA, [C].
+  toolbar_model()->AddComponentAction(component_action_id());
+  EXPECT_EQ(4u, num_toolbar_items());
+  EXPECT_EQ(3u, toolbar_model()->visible_icon_count());
+  EXPECT_EQ(component_action_id(), GetActionIdAtIndex(2u));
+  EXPECT_EQ(browser_action_c()->id(), GetActionIdAtIndex(3u));
+
+  // Remove the component action. Extension C should stay in the overflow.
+  // The icons should be: A, B, [C].
+  toolbar_model()->RemoveComponentAction(component_action_id());
+  EXPECT_EQ(3u, num_toolbar_items());
+  EXPECT_EQ(2u, toolbar_model()->visible_icon_count());
+  EXPECT_EQ(browser_action_c()->id(), GetActionIdAtIndex(2u));
+}
+
 TEST_F(ToolbarActionsModelUnitTest,
        TestUninstallVisibleExtensionDoesntBringOutOther) {
   Init();
